<?xml version="1.0" encoding="utf-8"?><!--
/*
 * Copyright 2014, 2015, 2016 Anael Mobilia
 * 
 * This file is part of NextINpact-Unofficial.
 * 
 * NextINpact-Unofficial is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * NextINpact-Unofficial is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with NextINpact-Unofficial. If not, see <http://www.gnu.org/licenses/>
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Options génériques -->
    <PreferenceCategory android:title="@string/optionsGenerales">

        <!-- Compte abonné -->
        <PreferenceScreen
            android:summary="@string/optionAbonneDetail"
            android:title="@string/optionAbonne">
            <PreferenceCategory android:title="Configurer mon compte abonné">
                <CheckBoxPreference
                    android:defaultValue="@bool/defautOptionAbonne"
                    android:key="@string/idOptionAbonne"
                    android:summary="@string/optionAbonneDisclaimer" />
                <EditTextPreference
                    android:defaultValue="@string/defautOptionLogin"
                    android:dependency="@string/idOptionAbonne"
                    android:key="@string/idOptionLogin"
                    android:summary="@string/optionLoginDetail"
                    android:title="@string/optionLogin" />
                <EditTextPreference
                    android:defaultValue="@string/defautOptionPassword"
                    android:dependency="@string/idOptionAbonne"
                    android:inputType="textPassword"
                    android:key="@string/idOptionPassword"
                    android:summary="@string/optionPasswordDetail"
                    android:title="@string/optionPassword" />
            </PreferenceCategory>
        </PreferenceScreen>

        <ListPreference
            android:defaultValue="@string/defautOptionZoomTexte"
            android:entries="@array/tailleTexteLiteral"
            android:entryValues="@array/tailleTexteValeur"
            android:key="@string/idOptionZoomTexte"
            android:summary="@string/optionTailleTexteDetail"
            android:title="@string/optionTailleTexte" />
    </PreferenceCategory>
    <!-- Options spécifiques aux articles -->
    <PreferenceCategory android:title="@string/optionsArticles">
        <ListPreference
            android:defaultValue="@string/defautOptionNbArticles"
            android:entries="@array/nbArticles"
            android:entryValues="@array/nbArticles"
            android:key="@string/idOptionNbArticles"
            android:summary="@string/optionNbArticlesDetail"
            android:title="@string/optionNbArticles" />

        <CheckBoxPreference
            android:defaultValue="@bool/defautOptionLiensDansArticles"
            android:key="@string/idOptionLiensDansArticles"
            android:summary="@string/optionActiverLiensArticleDetail"
            android:title="@string/optionActiverLiensArticle" />
    </PreferenceCategory>
    <!-- Options spécifiques aux commentaires -->
    <PreferenceCategory android:title="@string/optionsCommentaires">

        <!-- <CheckBoxPreference -->
        <!-- android:defaultValue="@bool/defautOptionTelechargerCommentaires" -->
        <!-- android:key="@string/idOptionTelechargerCommentaires" -->
        <!-- android:summary="@string/optionTelechargerCommentairesDetail" -->
        <!-- android:title="@string/optionTelechargerCommentaires" /> -->
        <CheckBoxPreference
            android:defaultValue="@bool/defautOptionLiensDansCommentaires"
            android:key="@string/idOptionLiensDansCommentaires"
            android:summary="@string/optionActiverLiensCommentaireDetail"
            android:title="@string/optionActiverLiensCommentaire" />
        <CheckBoxPreference
            android:defaultValue="@bool/defautOptionCommentairesTelechargementContinu"
            android:key="@string/idOptionCommentairesTelechargementContinu"
            android:summary="@string/optionCommentairesTelechargementContinuDetail"
            android:title="@string/optionCommentairesTelechargementContinu" />
        <CheckBoxPreference
            android:defaultValue="@bool/defautOptionPositionCommentaire"
            android:key="@string/idOptionPositionCommentaire"
            android:summary="@string/optionPositionCommentaireDetail"
            android:title="@string/optionPositionCommentaire"/>
        <CheckBoxPreference
            android:defaultValue="@bool/defautOptionAfficherNbNouveauComm"
            android:key="@string/idOptionAfficherNbNouveauComm"
            android:summary="@string/optionAfficherNbNouveauCommDetail"
            android:title="@string/optionAfficherNbNouveauComm"/>
    </PreferenceCategory>
    <!-- Développement -->
    <PreferenceCategory android:title="@string/optionsDeveloppement">
        <!-- <CheckBoxPreference -->
        <!-- android:defaultValue="@bool/defautOptionImagesEnHTTP" -->
        <!-- android:key="@string/idOptionImagesEnHTTP" -->
        <!-- android:summary="@string/optionImagesEnHTTPDetail" -->
        <!-- android:title="@string/optionImagesEnHTTP"/> -->
        <CheckBoxPreference
            android:defaultValue="@bool/defautOptionCacherBoutonPartage"
            android:key="@string/idOptionCacherBoutonPartage"
            android:summary="@string/optionCacherBoutonPartageDetail"
            android:title="@string/optionCacherBoutonPartage" />
        <CheckBoxPreference
            android:defaultValue="@bool/defautOptionDebug"
            android:key="@string/idOptionDebug"
            android:summary="@string/optionDebugDetail"
            android:title="@string/optionDebug" />
    </PreferenceCategory>
</PreferenceScreen>