<?xml version="1.0" encoding="utf-8"?><!--
/*
* Copyright 2013 - 2025 Anael Mobilia and contributors
 * 
 * This file is part of NextINpact-Unofficial.
 * 
 * NextINpact-Unofficial is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * NextINpact-Unofficial is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with NextINpact-Unofficial. If not, see <http://www.gnu.org/licenses/>
 */
-->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Compte abonné -->
    <PreferenceCategory app:title="@string/optionsAbonne">
        <SwitchPreferenceCompat
            app:defaultValue="@bool/defautOptionAbonne"
            app:key="@string/idOptionAbonne"
            app:summary="@string/optionAbonneDisclaimer" />
        <EditTextPreference
            app:defaultValue="@string/defautOptionLogin"
            app:dependency="@string/idOptionAbonne"
            app:key="@string/idOptionLogin"
            app:summary="@string/optionLoginDetail"
            app:title="@string/optionLogin" />
        <EditTextPreference
            app:defaultValue="@string/defautOptionPassword"
            app:dependency="@string/idOptionAbonne"
            app:key="@string/idOptionPassword"
            app:summary="@string/optionPasswordDetail"
            app:title="@string/optionPassword" />
    </PreferenceCategory>
</PreferenceScreen>