<?xml version="1.0" encoding="utf-8"?><!--
/*
 * Copyright 2014, 2015 Anael Mobilia
 * 
 * This file is part of NextINpact-Unofficial.
 * 
 * NextINpact-Unofficial is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 * 
 * NextINpact-Unofficial is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with NextINpact-Unofficial. If not, see <http://www.gnu.org/licenses/>
 */
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:yourapp="http://schemas.android.com/apk/res-auto">

    <!-- Rafraichir -->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/action_refresh"
        yourapp:showAsAction="ifRoom" />

    <!-- Overflow (...) -->
    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_menu_moreoverflow_normal_holo_dark"
        android:title="@string/action_overflow"
        yourapp:showAsAction="ifRoom">
        <menu>
            <!-- Paramètres -->
            <item
                android:id="@+id/action_settings"
                android:icon="@drawable/ic_sysbar_quicksettings"
                android:title="@string/action_settings"
                yourapp:showAsAction="ifRoom" />

            <!-- A propos -->
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_menu_info_details"
                android:title="@string/action_about" />

            <!-- Support -->
            <item
                android:id="@+id/action_support"
                android:icon="@drawable/ic_menu_help"
                android:title="@string/action_support" />
        </menu>
    </item>
</menu>